--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Eli Nathan",
   "license": "ISC",
   "devDependencies": {
+    "bemify": "^0.1.2",
     "browser-sync": "*",
     "browserify": "*",
     "gulp": "*",
